# UInit

./: .gitignore  CHANGELOG.md  Cargo.toml  DEVELOPING.md  README.md
scripts/: clean_test_env.sh  cleanup_test_env.sh  create_test_env.sh  test_manifest.json
src/: add.rs  alias.rs  alias_registry.rs  args.rs  ci.rs  cli.rs  config.rs  constants.rs  contexts.rs  doctor.rs  enums.rs  feature.rs  fs.rs  import.rs  main.rs  metadata.rs  new_project.rs  project_context.rs  remotes.rs  reporter.rs  steam.rs  unity_project.rs  version.rs
src/resources/: default_aliases.toml
src/resources/templates/: README.md.jinja2  package.json.jinja2
src/templates/: .gitignore-template  CHANGELOG.md  LICENSE-template  LICENSE.jinja2  LICENSE.md.jinja2  assembly_def_editor.asmdef.jinja2  assembly_def_runtime.asmdef.jinja2  assembly_def_tests.asmdef.jinja2  package-template.jinja2.json
src/templates/github_workflows/: editor_test.yaml
