[package]
name = "uinit"
version = "0.1.0"
edition = "2024"

[dependencies]
indicatif = "0.18.4"
log = "0.4.29"
clap = { version = "4.0", features = ["derive"] }
minijinja = "2.17.1"
chrono = "0.4.44"
anyhow = "1.0.102"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9"
